3-kubernetes/_base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo-svc
spec:
  ports:
  - name: server-port
    port: 8000
    targetPort: 8000
  selector:
    app: demo
  sessionAffinity: None
  type: ClusterIP
